Communication bidirectionnelle client/server fonctionne

--- a/MHClient/mini-hearthstone/src/app/app.component.html
+++ b/MHClient/mini-hearthstone/src/app/app.component.html
@@ -32,6 +32,7 @@
       <input type="text" id="name" name="name" class="form-control" [(ngModel)]="name" />
     </div>
     <button id="send" class="btn btn-default" type="button" (click)="sendName()">Send</button>
+    <button id="connectToGame" class="btn btn-default" type="button" (click)="connectToGame()">Connect</button>
   </form>
 
   <table id="conversation" class="table table-striped" style="margin-top: 20px;">
