--- a/MHClient/mini-hearthstone/src/app/app.component.html
+++ b/MHClient/mini-hearthstone/src/app/app.component.html
@@ -14,7 +14,6 @@
 <div style="color: blue; text-align: center">
   <h1>{{title}}</h1>
 </div>
-
 <div class="container" style="width: 400px; margin-top: 20px;">
 
   <form class="form-inline">
@@ -26,21 +25,42 @@
   </form>
 
 </div>
-<div>
-  <button id="connectToGame" class="btn btn-default" type="button" (click)="connectToGame()">Trouver une partie</button>
-  <table id="conversation" class="table table-striped" style="margin-top: 20px;">
-    <thead>
-    <tr>
-      <th>Messages serveur:</th>
-    </tr>
-    </thead>
-    <tbody *ngFor="let greeting of greetings">
-    <tr>
-      <td>{{greeting}}</td>
-    </tr>
-    </tbody>
-  </table>
+<div id="gameSearch">
+  <div>
+    <button id="connectToGame" class="btn btn-default" type="button" (click)="openHeroSelect()">Trouver une partie</button>
+  </div>
+  <div>
+    <button id="cancelSearch" class="btn btn-default hiddenCancelButton" type="button" (click)="cancelSearch()">Annuler</button>
+  </div>
+  <div class="form-popup" id="heroSelectPop">
+    <form class="form-container">
+      <h1>Choix du héro</h1>
+      <select name="heroName" (change)="selectHeroHandler($event)">
+        <option value="Jaina">Jaina (mage)</option>
+        <option value="Garosh">Garosh (guerrier)</option>
+        <option value="Uther">Uther (paladin)</option>
+      </select>
+      <button id="findGame" class="btn btn-default" type="button" (click)="connectToGame()">Trouver une partie</button>
+      <button type="submit" class="btn cancel" (click)="closeHeroSelect()">Annuler</button>
+    </form>
+  </div>
+  <div>
+    <table id="conversation" class="table table-striped" style="margin-top: 20px;">
+      <thead>
+      <tr>
+        <th>Messages serveur:</th>
+      </tr>
+      </thead>
+      <tbody *ngFor="let greeting of greetings">
+      <tr>
+        <td>{{greeting}}</td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
+
 </body>
 
 </html>
