--- a/MHClient/mini-hearthstone/src/app/app.component.html
+++ b/MHClient/mini-hearthstone/src/app/app.component.html
@@ -2,64 +2,74 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Spring Boot WebSocket</title>
-  <base href="/">
+    <meta charset="utf-8">
+    <title>Spring Boot WebSocket</title>
+    <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 
 <body>
 <div style="color: blue; text-align: center">
-  <h1>{{title}}</h1>
+    <h1>{{title}}</h1>
 </div>
 <div class="container" style="width: 400px; margin-top: 20px;">
 
-  <form class="form-inline">
-    <div class="form-group">
-      <label for="connect">Connexion au serveur:</label>
-      <button id="connect" class="btn btn-default" type="button" [disabled]="!disabled" (click)="connect()">Connexion</button>
-      <button id="disconnect" class="btn btn-default" type="submit" [disabled]="disabled" (click)="disconnect()">Déconnexion</button>
-    </div>
-  </form>
+    <form class="form-inline">
+        <div class="form-group">
+            <label for="connect">Connexion au serveur:</label>
+            <button id="connect" class="btn btn-default" type="button" [disabled]="!disabled" (click)="connect()">Connexion</button>
+            <button id="disconnect" class="btn btn-default" type="submit" [disabled]="disabled" (click)="disconnect()">Déconnexion</button>
+        </div>
+    </form>
 
 </div>
 <div id="gameSearch">
-  <div>
-    <button id="connectToGame" class="btn btn-default" type="button" (click)="openHeroSelect()">Trouver une partie</button>
-  </div>
-  <div>
-    <button id="cancelSearch" class="btn btn-default hiddenCancelButton" type="button" (click)="cancelSearch()">Annuler</button>
-  </div>
-  <div class="form-popup" id="heroSelectPop">
-    <form class="form-container">
-      <h1>Choix du héro</h1>
-      <select name="heroName" (change)="selectHeroHandler($event)">
-        <option value="Jaina">Jaina (mage)</option>
-        <option value="Garosh">Garosh (guerrier)</option>
-        <option value="Uther">Uther (paladin)</option>
-      </select>
-      <button id="findGame" class="btn btn-default" type="button" (click)="connectToGame()">Trouver une partie</button>
-      <button type="submit" class="btn cancel" (click)="closeHeroSelect()">Annuler</button>
-    </form>
-  </div>
-  <div>
-    <table id="conversation" class="table table-striped" style="margin-top: 20px;">
-      <thead>
-      <tr>
-        <th>Messages serveur:</th>
-      </tr>
-      </thead>
-      <tbody *ngFor="let greeting of greetings">
-      <tr>
-        <td>{{greeting}}</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
+    <div>
+        <button id="connectToGame" class="btn btn-default" type="button" (click)="openHeroSelect()">Trouver une partie</button>
+    </div>
+    <div>
+        <button id="cancelSearch" class="btn btn-default hiddenCancelButton" type="button" (click)="cancelSearch()">Annuler</button>
+    </div>
+    <div class="form-popup" id="heroSelectPop">
+        <form class="form-container">
+            <h1>Choix du héro</h1>
+            <select name="heroName" (change)="selectHeroHandler($event)">
+                <option value="Jaina">Jaina (mage)</option>
+                <option value="Garosh">Garosh (guerrier)</option>
+                <option value="Uther">Uther (paladin)</option>
+            </select>
+            <button id="findGame" class="btn btn-default" type="button" (click)="connectToGame()">Trouver une partie</button>
+            <button type="submit" class="btn cancel" (click)="closeHeroSelect()">Annuler</button>
+        </form>
+    </div>
+    <div>
+        <table id="conversation" class="table table-striped" style="margin-top: 20px;">
+            <thead>
+            <tr>
+                <th>Messages serveur:</th>
+            </tr>
+            </thead>
+            <tbody *ngFor="let greeting of greetings">
+            <tr>
+                <td>{{greeting}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <router-outlet></router-outlet>
 </div>
-
+<div id="parent">
+    <a class="card" *ngFor="let myCard of myCards" >
+        <img src= {{myCard.imgurl}} alt="Avatar" style="width:100%">
+        <div class="contCard">
+            <b>{{myCard.name}}</b>
+            <p>Mana requis: {{myCard.requiredMana}}</p>
+            <p>Points de dégats: {{myCard.damagePoints}}</p>
+        </div>
+    </a>
+</div>
 
 </body>
 
