Le dos des cartes de l'adversaire s'affichent

--- a/MHClient/mini-hearthstone/src/app/app.component.css
+++ b/MHClient/mini-hearthstone/src/app/app.component.css
@@ -74,7 +74,7 @@
 }
 
 .card {
-  margin:auto;
+  margin-left: 10px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 5%;
@@ -94,7 +94,39 @@
   margin-left: auto;
 }
 
-#parent{
+#parentMyHand{
+  height: 14%;
   text-align:center;
 }
+
+#parentHisHand{
+  height: 14%;
+  text-align:center;
+}
+
+#parentHisHero{
+  height: 14%;
+  text-align:center;
+}
+
+#parentMyHero{
+  height: 14%;
+  text-align:center;
+}
+
+#parentMyMinions{
+  height: 14%;
+  text-align:center;
+}
+
+#parentHisMinions{
+  height: 14%;
+  text-align:center;
+}
+
+#theBoard{
+  height: 84vh;
+  display: none;
+}
+
 
