Permet d'afficher le héro du joueur et de son adversaire

--- a/MHClient/mini-hearthstone/src/app/app.component.css
+++ b/MHClient/mini-hearthstone/src/app/app.component.css
@@ -1,132 +1,117 @@
 /* Button used to open the contact form - fixed at the bottom of the page */
 .open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
+    background-color: #555;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0.8;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
 }
 
 /* The popup form - hidden by default */
 .form-popup {
-  display: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
 }
 
 /* Add styles to the form container */
 .form-container {
-  max-width: 300px;
-  padding: 10px;
-  background-color: white;
+    max-width: 300px;
+    padding: 10px;
+    background-color: white;
 }
 
 /* Full-width input fields */
 .form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
 }
 
 /* When the inputs get focus, do something */
 .form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+    background-color: #ddd;
+    outline: none;
 }
 
 /* Set a style for the submit/login button */
 .form-container .btn {
-  background-color: #4CAF50;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom:10px;
+    opacity: 0.8;
 }
 
 /* Add a red background color to the cancel button */
 .form-container .cancel {
-  background-color: red;
+    background-color: red;
 }
 
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
-  opacity: 1;
+    opacity: 1;
 }
 
 .hiddenCancelButton {
-  display: none;
-  background-color: red;
-  color: white;
+    display: none;
+    background-color: red;
+    color: white;
 }
 
 .card {
-  margin-left: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 5%;
-  display: inline-block;
+    margin-left: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    display:inline-block;
+    width: 5%;
+    padding: 5px;
+    vertical-align: top;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .contCard {
-  word-break: break-all;
-  font-size: 1vw;
-  padding-right: 0px;
-  padding-left: 0px;
-  margin-right: auto;
-  margin-left: auto;
+    word-break: break-all;
+    font-size: 1vw;
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-#parentMyHand{
-  height: 14%;
-  text-align:center;
-}
-
-#parentHisHand{
-  height: 14%;
-  text-align:center;
-}
-
-#parentHisHero{
-  height: 14%;
-  text-align:center;
-}
-
-#parentMyHero{
-  height: 14%;
-  text-align:center;
-}
-
-#parentMyMinions{
-  height: 14%;
-  text-align:center;
-}
-
-#parentHisMinions{
-  height: 14%;
-  text-align:center;
+/* Clearfix (clear floats) */
+.row{
+    margin: 0 auto;
+    text-align: center;
+    height: 14vh;
 }
 
 #theBoard{
-  height: 84vh;
-  display: none;
+    display: none;
+    height: 84vh;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
 }
 
 
