Si le serviteur peut attaquer, le bord droit de son image devient rouge

--- a/MHClient/mini-hearthstone/src/app/app.component.css
+++ b/MHClient/mini-hearthstone/src/app/app.component.css
@@ -115,7 +115,11 @@ img {
 }
 
 .taunt {
-    border: solid coral;
+    border-top: solid coral;
+}
+
+.canAttack {
+    border-right: solid #ff0000;
 }
 
 
