--- a/MHClient/mini-hearthstone/src/app/app.component.html
+++ b/MHClient/mini-hearthstone/src/app/app.component.html
@@ -101,6 +101,7 @@
 
             <div class="form-popup"  [attr.id]="'cardPopup' + myCard.id" style="display: none">
                 <form class="form-container">
+                    <button *ngIf="myCard.canAttack" class="btn btn-default" type="button" (click)="showTargetForMinion(myCard.id)">Attaquer</button>
                     <button type="submit" class="btn cancel" (click)="closeCardPopup(myCard.id)">Fermer</button>
                     <img src={{myCard.imgurl}} alt="Avatar" style="width:100%">
                     <div class="containerCardDetails">
@@ -133,7 +134,6 @@
                     <img src={{myCard.imgurl}} alt="Avatar" style="width:100%">
                     <div class="containerCardDetails">
                         <h4><b>{{myCard.name}}</b></h4>
-                        {{myCard.id}}
                         <p>Cout: {{myCard.requiredMana}}</p>
                         <div *ngIf="myCard.cardType === 'minion' ">
                             <p>Dégats: <b>{{myCard.damagePoints}}</b></p>
@@ -187,6 +187,43 @@
     </table>
 </div>
 
+<div class="form-popup"  id="cardPopupShowTarget" style="display: none; z-index: 50">
+
+    <form class="form-container">
+        <button type="submit" class="btn cancel" (click)="closeTargetPopup()">Fermer</button>
+        <button class="btn btn-default" type="button" (click)="openTargetPopup()">Attaquer un serviteur</button>
+
+        <div id="targetDetails" class="row" style="display: none">
+            <div class="targetDetails" *ngFor="let myCard of myTargets">
+                <div id="targetImage">
+                    <a (click)="openTargetDetails(myCard.id)" >
+                        <img [ngClass]="{
+                    'taunt': myCard.taunt,
+                    'canAttack': myCard.canAttack,
+                    'lifeSteal': myCard.lifeSteal}"
+                             src= {{myCard.imgurl}} alt="Avatar">
+                    </a >
+                </div>
+
+                <div [attr.id]="'targetDetailsPopup' + myCard.id" style="position: relative; z-index: 100; display: none">
+                    <div class="form-popup" style="display: block">
+                        <form class="form-container">
+                            <button type="submit" class="btn cancel" (click)="closeTargetDetails(myCard.id)">Fermer</button>
+                            <img src={{myCard.imgurl}} alt="Avatar" style="width:100%">
+                            <div class="containerCardDetails">
+                                <h4><b>{{myCard.name}}</b></h4>
+                                <p>Coût: {{myCard.requiredMana}}</p>
+                                <p>Dégats: <b>{{myCard.damagePoints + myMana?.aura}}</b></p>
+                                <p>Vie: <b>{{myCard.healthPoints}}</b></p>
+                                <p>{{myCard.text}}</p>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
 
 </body>
 
